--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WebActivity"
+            android:name=".activity.WebActivity"
             android:label="@string/app_name" >
 
         </activity>
         <activity
-            android:name=".RecentTrendsActivity"
+            android:name=".activity.RecentTrendsActivity"
             android:label="@string/app_name" >
 
         </activity>
