--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,30 +7,30 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ts_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="@string/app_name">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >
+            android:theme="@style/TrendTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".activity.WebActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >>
-
+            android:theme="@style/TrenderTheme" >>
         </activity>
+
         <activity
             android:name=".activity.RecentTrendsActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light" >>
-
+            android:theme="@style/TrenderTheme" >>
         </activity>
+
     </application>
 
 </manifest>
