--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity
             android:name=".activity.WebActivity"
             android:label="@string/app_name"
+            android:parentActivityName=".MainActivity"
             android:theme="@style/TrendTheme" >
         </activity>
 
